[tool.poetry]
name = "promiscuouspulse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.9"
wget = "^3.2"
pywin32 = "^306"
chromedriver-autoinstaller = "^0.6.3"
undetected-chromedriver = "^3.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
